--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # main links
 main:
   - title: "Home"
-    url: https://choiiis.github.io/
+    url: https://kosmoth.github.io/
 
   - title: "About"
     url: /about/
 
   - title: "GitHub"
-    url: https://github.com/choiiis
+    url: https://github.com/kosmoth
 
   # - title: "Projects"
   #   url: /projects/
@@ -18,11 +18,16 @@ main:
 # sidebar navigation (categories)
 # 2022.02.15 sidebar update : simple ver.
 categories:
-  - title: "Categories1"
+  - title: "cnn10"
     url: /categories/categories1/
-  - title: "Categories2"
+  - title: "VOA"
     url: /categories/categories2/
-  - title: "Categories3"
+  - title: "title3"
     url: /categories/categories3/
-  - title: "Categories4"
-    url: /categories/categories4/
+  - title: "title4"
+    children:
+      - title: "categories4"
+        url: /categories/categories4/
+      - title: "Categories5"
+        url: /categories/categories5/ 
+    
