--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Atlas Jekyll Theme
+title: Fly My World
 desciption: >
   A jekyll theme for personal website.
 email: yourusername@gmail.com
